Firebase app update

--- a/Firebase Web App/package.json
+++ b/Firebase Web App/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Scrim-s04nega",
-  "description": "https://v2.scrimba.com/learn-javascript-c0v/~05n",
+  "name": "Scrim-s04hv56",
+  "description": "https://v2.scrimba.com/learn-javascript-c0v/~06j",
   "scripts": {
     "start": "vite",
     "dev": "vite",
